# exoscale-rs

./: .gitignore  .openapi-generator-ignore  CHANGELOG.md  Cargo.toml  LICENSE.md  Makefile  README.md  changes.json  config.yaml  deny.toml
.github/: dependabot.yaml
.github/workflows/: clippy.yml  generate.yml  release.yml  rust.yml
.openapi-generator/: FILES
docs/: AccessKey.md  AccessKeyResource.md  AddRuleToSecurityGroupRequest.md  AddRuleToSecurityGroupRequestIcmp.md  AddServiceToLoadBalancerRequest.md  AiApiKey.md  AiApiKeyApi.md  AiApiKeyValue.md  AiApiKeyWithValue.md  Aideployment.md  Aimodel.md  AntiAffinityGroup.md  AntiAffinityGroupApi.md  AntiAffinityGroupRef.md  ApiKeyApi.md  ApiKeyUsageEntry.md  AssumeIamRole200Response.md  AssumeIamRoleRequest.md  AttachBlockStorageVolumeToInstanceRequest.md  AttachDbaasServiceToEndpointRequest.md  AttachInstanceToPrivateNetworkRequest.md  AttachInstanceToPrivateNetworkRequestInstance.md  AttachInstanceToSubnetRequest.md  AutovacuumSettings.md  AzureAdOAuthIntegration.md  BackgroundBgWriterSettings.md  BlockStorageApi.md  BlockStorageSnapshot.md  BlockStorageSnapshotRef.md  BlockStorageSnapshotTarget.md  BlockStorageVolume.md  BlockStorageVolumeDetails.md  BlockStorageVolumeRef.md  BlockStorageVolumeTarget.md  CcmApi.md  ClickHouseServerSettings.md  ClusterApi.md  ComputeApi.md  ConfigureLogCleanerForTopicCompaction.md  CopyTemplateRequest.md  (+556 more)
src/: lib.rs  middleware.rs  signing.rs
src/apis/: ai_api_key_api.rs  anti_affinity_group_api.rs  api_key_api.rs  block_storage_api.rs  ccm_api.rs  cluster_api.rs  compute_api.rs  configuration.rs  crypto_api.rs  dbaas_api.rs  default_api.rs  deploy_target_api.rs  deployment_api.rs  dns_api.rs  domain_api.rs  elastic_ip_api.rs  event_api.rs  iam_api.rs  instance_api.rs  instance_pool_api.rs  instance_type_api.rs  kms_key_api.rs  mod.rs  model_api.rs  network_load_balancer_api.rs  nodepool_api.rs  nodepool_template_api.rs  operation_api.rs  organization_api.rs  organization_policy_api.rs  private_network_api.rs  quotas_api.rs  record_api.rs  reverse_dns_api.rs  role_api.rs  security_group_api.rs  sks_api.rs  snapshot_api.rs  sos_api.rs  ssh_key_api.rs  (+4 more)
src/models/: access_key.rs  access_key_operation.rs  access_key_resource.rs  add_external_source_to_security_group_request.rs  add_rule_to_security_group_request.rs  add_rule_to_security_group_request_icmp.rs  add_service_to_load_balancer_request.rs  ai_api_key.rs  ai_api_key_value.rs  ai_api_key_with_value.rs  aideployment.rs  aimodel.rs  anti_affinity_group.rs  anti_affinity_group_ref.rs  api_key_usage_entry.rs  assume_iam_role_200_response.rs  assume_iam_role_request.rs  attach_block_storage_volume_to_instance_request.rs  attach_dbaas_service_to_endpoint_request.rs  attach_instance_to_private_network_request.rs  attach_instance_to_private_network_request_instance.rs  attach_instance_to_subnet_request.rs  autovacuum_settings.rs  azure_ad_o_auth_integration.rs  background__bg__writer_settings.rs  background_bg_writer_settings.rs  block_storage_snapshot.rs  block_storage_snapshot_ref.rs  block_storage_snapshot_target.rs  block_storage_volume.rs  block_storage_volume_details.rs  block_storage_volume_ref.rs  block_storage_volume_target.rs  cdn_configuration.rs  click_house_server_settings.rs  configure_log_cleaner_for_topic_compaction.rs  copy_template_request.rs  create_access_key_request.rs  create_ai_api_key_request.rs  create_ai_api_key_response.rs  (+549 more)
static/: signing.rs  source.yaml  utils.rs
static/templates/: Cargo.mustache  lib.mustache  model.mustache
static/templates/reqwest/: api.mustache  api_mod.mustache  configuration.mustache
