[package]
name = "exoscale-rs"
version = "3.2.0"
authors = ["support@exoscale.com"]
description = "Infrastructure automation API, allowing programmatic access to all Exoscale products and services."
license = "MIT"
edition = "2021"
repository = "https://github.com/hasanhakkaev/exoscale-rs"
documentation = "https://docs.rs/exoscale-rs"
homepage = "https://github.com/hasanhakkaev/exoscale-rs"


[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_with = { version = "^3.12.0", default-features = false, features = ["base64", "std", "macros"] }
serde_json = "^1.0"
serde_repr = "^0.1"
base64 = "0.22.1"
hmac = "0.12.1"
http = "1.3.1"
sha2 = "0.10.9"
secrecy = "0.10.3"
bytes = "1.10.1"
async-trait = "0.1.88"
url = "^2.5"
libc = "0.2.172"
uuid = { version = "^1.8", features = ["serde", "v4"] }
reqwest = { version = "^0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
reqwest-middleware = { version = "^0.5", features = ["json", "multipart", "rustls-tls"] }
